# for_django_menu

./: .env.sample  README.md  middleware.py  pyproject.toml
app/: admin.py  models.py
app/migrations/: 0001_initial.py
app/templates/: menu.html
config/: settings.py
templatetags/: draw_menu.py
